--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,52 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body{
-    display: flex;
-    flex-direction: column;
-    background-color: antiquewhite;
-    flex-wrap: wrap;
-    align-content: center;
+body {
+    background-image: url();
+}
+
+.input{
+    display: grid;
     align-items: center;
     justify-content: center;
+    justify-items: center;
+    margin-top: 10vw;
+    border: 5px rgb(59, 59, 247);
+    padding: 10px
 }
-div{color: rgb(240, 182, 131);
+.offcanvas-body div{
+    border: 5px rgb(75, 75, 75) solid;
+    margin: 5px;
+}
+input{
+    margin: 5px;
+}
+#historial{
+    color: red;
+}
+.cuadro{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: nowrap;
+    flex-direction: row
+}
+.cuadrito{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    padding: 20px;
+    background-image: linear-gradient(rgb(0, 225, 255), rgb(48, 48, 209));
+    border-radius: 10px;
+    border: 15px rgb(75, 75, 75) solid;
+    width: 40vw;
+}
+
+.calculadora {
+    color: #017bab;
     border-style: double;
 
     margin: 300px;
@@ -23,8 +57,69 @@ div{color: rgb(240, 182, 131);
     align-items: center;
     justify-content: center;
 }
-h1{
+
+
+.form-login {
+    width: 800px;
+    height: 370px;
+    background: #4e4d4d;
+    margin: auto;
+    margin-top: 180px;
+    box-shadow: 7px 13px 37px #000;
+    padding: 20px 30px;
+    border-top: 4px solid #017bab;
+    color: white;
+}
+
+.form-login h5 {
+    margin: 0;
     text-align: center;
-    background-color: rgb(240, 182, 131);
-    color: aliceblue;
+    height: 40px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid;
+    font-size: 20px;
+}
+
+.controls {
+    width: 100%;
+    border: 1px solid ;
+    margin-bottom: 15px;
+    padding: 11px 10px;
+    background: #252323;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.btn-ingresar{
+    width: 100%;
+    height: 40px;
+    background: #017bab;
+    border: none;
+    color: white;
+    margin-bottom: 16px;
+}
+.btn-crear {
+    width: 100%;
+    height: 40px;
+    background: #017bab;
+    border: none;
+    color: white;
+    margin-bottom: 16px;
+}
+.form-login p {
+    height: 40px;
+    text-align: center;
+    border-bottom: 1px solid;
+}
+.btn-primary{
+    width: min-content;
+}
+.form-login a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.form-login a:hover {
+    text-decoration: underline;
 }
