--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.navbar{
+    font-weight: bolder;
+}
+.mweather{
+    display: grid;
+    justify-items: flex-end;
+    margin: 10px;
+}
+#weather{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px 0px;
+    text-align: center;
+    padding: 2% 1%;
+    display: flex;
+    flex-direction: column;
+    scroll-behavior: smooth;
+    float: left;
+    position: fixed;
+    nav-index: unset;
+    z-index: 1000;
+    border: 5px rgb(75, 75, 75) solid;
+    margin: 5px;
+    border-radius: 50px 0px;
+    width: 180px;
+    font-weight: bolder;
+}
 body {
-    background-image: url();
+    background-image: url(../imagenes/numeritos.jpg);
 }
 p{
     font-weight: bold;
@@ -66,7 +93,10 @@ input{
     justify-content: center;
 }
 
-
+.hh1{
+    text-transform: uppercase;
+    size: 50px;
+}
 .form-login {
     width: 800px;
     height: 370px;
@@ -77,8 +107,18 @@ input{
     padding: 20px 30px;
     border-top: 4px solid #017bab;
     color: white;
+    display: flex;
+    flex-direction: column;
 }
-
+.form-login2 {
+    width: 800px;
+    background: #4e4d4d;
+    margin: auto;
+    box-shadow: 7px 13px 37px #000;
+    padding: 20px 30px;
+    border-top: 4px solid #017bab;
+    color: white;
+}
 .form-login h5 {
     margin: 0;
     text-align: center;
@@ -87,7 +127,10 @@ input{
     border-bottom: 1px solid;
     font-size: 20px;
 }
+img{
+    width: 300px;
 
+}
 .controls {
     width: 100%;
     border: 1px solid ;
